RESOLVED FIXED65223
JSC command-line tool does not come with any facility for measuring time precisely
https://bugs.webkit.org/show_bug.cgi?id=65223
Summary JSC command-line tool does not come with any facility for measuring time prec...
Filip Pizlo
Reported 2011-07-26 17:23:53 PDT
The only facility for measuring time is Date, which clips and truncates the time. Internally, JSC has access to the most precise available method on any given OS. For profiling and benchmarking, it would be useful if the jsc command-line tool exposed this functionality to JavaScript programs.
Attachments
the patch (2.64 KB, patch)
2011-07-26 17:26 PDT, Filip Pizlo
no flags
the patch (changed function name) (2.63 KB, patch)
2011-07-26 17:50 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2011-07-26 17:26:42 PDT
Created attachment 102079 [details] the patch
Geoffrey Garen
Comment 2 2011-07-26 17:31:58 PDT
Comment on attachment 102079 [details] the patch Seems like the JS name should be "preciseTime" to match the C++ name.
Filip Pizlo
Comment 3 2011-07-26 17:50:11 PDT
Created attachment 102085 [details] the patch (changed function name) Good point, changed the name to preciseTime().
Gavin Barraclough
Comment 4 2011-07-26 17:56:50 PDT
Comment on attachment 102085 [details] the patch (changed function name) To nitpick the change log is now wrong, but I don't think anyone is going to be confused by this patch, so r+.
WebKit Review Bot
Comment 5 2011-07-26 19:56:37 PDT
Comment on attachment 102085 [details] the patch (changed function name) Clearing flags on attachment: 102085 Committed r91817: <http://trac.webkit.org/changeset/91817>
WebKit Review Bot
Comment 6 2011-07-26 19:56:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.