JSC command-line tool does not come with any facility for measuring time precisely. https://bugs.webkit.org/show_bug.cgi?id=65223

Patch by Filip Pizlo <fpizlo@apple.com> on 2011-07-26
Reviewed by Gavin Barraclough.

Exposed WTF::currentTime() as currentTimePrecise().

* jsc.cpp:
(GlobalObject::GlobalObject):
(functionPreciseTime):

Canonical link: https://commits.webkit.org/80984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91817 268f45cc-cd09-0410-ab3c-d52691b4dbfc